# shadowsocks-libev

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.in
docker/client/: Dockerfile.toolchain  Makefile  build.sh  make.bat
docker/linux-mac/: Dockerfile  Makefile  build.sh  deps.sh  make.bat  prepare.sh
docker/mingw/: Dockerfile  Makefile  build.sh  deps.sh  make.bat  prepare.sh
docker/mingw-arm64/: Dockerfile  Dockerfile.deps  Makefile  build.sh  deps.sh  make.bat  prepare.sh
docker/server/: Dockerfile  Makefile  build.sh  make.bat
goquiet/: Makefile.am  Makefile.in  libgoquiet.go
goquiet/src/github.com/cbeuw/gotfo/: fd_go19_unix.go
libcork/: Makefile.am  Makefile.in
libcork/include/libcork/config/: gcc.h  mingw32.h
libcork/posix/: env.c
libev/: Makefile.am  Makefile.in  ev.c  ev_epoll.c  wepoll.c
libipset/: Makefile.in
libudns/: Makefile.in
mbedtls/: Makefile  Makefile.am  Makefile.in
openwrt/luci-app-shadowsocksr/files/luci/model/cbi/shadowsocksr/: servers-details.lua
openwrt/mbedtls/: Makefile
openwrt/mbedtls/patches/: 200-config.patch
openwrt/shadowsocksr/: Makefile
python/: .gitignore  Makefile  nuitka-bin.py  server.py
python/siphashc/: benchmark.py  setup.py  siphash.c  siphashc.c  test_siphashc.py
python/tests/: encrypt_test.py
python/windows/: winselect.pyd
python/winselect/: chkstk.S  selectmodule.c  setup.py  wepoll.c  wepoll.h
python/yogurt/: asyncdns.py  common.py  daemon.py  encrypt.py  eventloop.py  local.py  lru_cache.py  manager.py  obfs.py  shell.py  tcprelay.py  udprelay.py
python/yogurt/crypto/: openssl.py  rc4_md5.py  siphash.py  sodium.py  table.py
python/yogurt/obfsplugin/: auth.py  auth_chain.py  http_simple.py  obfs_tls.py  plain.py  verify.py
re2/: Makefile  Makefile.am  Makefile.in  cre2.cpp  cre2.h
re2/re2/: dfa.cc  nfa.cc
re2/util/: logging.h
src/: Makefile.am  Makefile.in  acl.c  encrypt.c  encrypt.h  includeobfs.h  jconf.c  jconf.h  libgoquiet.c  local.c  local.h  manager.c  netutils.c  netutils.h  plugin.c  redir.c  server.c  shadowsocks.h  tunnel.c  udprelay.c  utils.c  utils.h  win32.c  win32.h
src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  go_quiet.c  go_quiet.h  obfs.c  obfs.h  obfsutil.c  siphash.c  tls1.2_ticket.c  tls1.2_ticket.h  verify.c
sregex/: Makefile.am  Makefile.in
sregex/src/sregex/: sre_capture.c  sre_palloc.c  sre_vm_thompson.h  sregex.h
